# signal-notify

./: .gitignore  CHANGELOG.md  LICENSE  README.md  notify.example.yaml  pyproject.toml
.github/workflows/: ci.yml  differential.yml  wheels.yml
docs/: customizing.md  home_assistant.md  native_caveats.md  technical_reference.md  tutorial_self_notifications.md
examples/: agent_chat.py  agent_daemon.py
loop/: STATE.md
rust/: build.sh
rust/kyber1024_py/: Cargo.toml  PROVENANCE.md  pyproject.toml  rust-toolchain.toml
rust/kyber1024_py/src/: lib.rs
rust/spqr_py/: Cargo.toml  PROVENANCE.md  pyproject.toml  rust-toolchain.toml
rust/spqr_py/src/: lib.rs
src/signalnotify/: __init__.py  cli.py  config.py  dedupe.py  engine.py  policy.py  sender.py
src/signalnotify/native/: __init__.py  attachments.py  crypto.py  kem.py  maintenance.py  messaging.py  proto.py  provisioning.py  ratchet.py  receive.py  registration.py  store.py
src/signalnotify/native/pure/: __init__.py  _pb.py  kyber1024.py  mlkem768.py  spqr.py  spqr_gf.py
tests/: test_attachments.py  test_cli.py  test_data_dir.py  test_dedupe.py  test_engine.py  test_errors.py  test_golden.py  test_maintenance.py  test_native_kem.py  test_native_messaging.py  test_native_ratchet.py  test_native_receive.py  test_native_registration.py  test_policy.py  test_pure_kyber.py  test_pure_mlkem.py  test_pure_spqr.py  test_receive_spool.py  test_sender.py  test_store.py
tests/fixtures/: account_config.json  generate_fixtures.py  meta.json
