[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-notify"
dynamic = ["version"]
description = "Notify yourself via Signal (Note-to-Self), pure Python: QR device-linking, native send/receive, quiet hours, batching, and file-based alert dedupe."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Ricardo de Azambuja" }]
keywords = ["signal", "notifications", "note-to-self", "alerts", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "qrcode>=7",
    "PyYAML>=5.4",
    # Used only for classical primitives (X25519, HKDF, AES-CBC/CTR, PKCS7);
    # all post-quantum crypto (ML-KEM, Kyber-1024, SPQR) is pure Python in
    # signalnotify.native.pure. Floor is 38: the earliest release with
    # X25519 {private,public}_bytes_raw(). Kept low on purpose so older ARM
    # platforms (Jetson/RPi) can use an existing distro/piwheels wheel.
    "cryptography>=38",
    "websockets>=10.0",
]

[project.urls]
Homepage = "https://github.com/ricardodeazambuja/signal-notify"
Repository = "https://github.com/ricardodeazambuja/signal-notify"
Issues = "https://github.com/ricardodeazambuja/signal-notify/issues"
Changelog = "https://github.com/ricardodeazambuja/signal-notify/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
signal-notify = "signalnotify.cli:main"

[tool.setuptools.dynamic]
version = { attr = "signalnotify._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
signalnotify = ["native/signal-ca.pem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
